# Gemini-Agent-MCP

./: README.md  main.py  pyproject.toml
src/: gemini_client.py
src/gemini_utilities/: clean_schema.py  stdio_chat_loop.py  system_input.py  tools_converter.py
